force-app/main/default/objects/Currency_Conversion__c/Currency_Conversion__c.object-meta.xml
<CustomObject>
    <description>This object will be used to convert Quote pricing into Deal Currency from the Dollar amount stored in Salesforce. It will also be used to calculate the dollar amount used in approvals</description>
    <label>Currency Conversion</label>
    <nameField>
        <displayFormat>CCN-{0000}</displayFormat>
        <label>Currency Conversion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Currency Conversions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>