force-app/main/default/objects/Currency_Conversion__c/fields/Active__c.field-meta.xml
<CustomField>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this record is Active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </CustomField>