force-app/main/default/objects/Currency_Conversion__c/fields/Budget_Rate__c.field-meta.xml
<CustomField>
        <fullName>Budget_Rate__c</fullName>
        <description>Budget Rate used for currency conversion of Quote Lines. This will be used to calculate the amount used in approvals.</description>
        <label>Budget Rate</label>
        <precision>14</precision>
        <scale>6</scale>
        <type>Number</type>
    </CustomField>