force-app/main/default/objects/Currency_Conversion__c/fields/End_Date__c.field-meta.xml
<CustomField>
        <fullName>End_Date__c</fullName>
        <description>End Period for Currency Conversion</description>
        <label>End Date</label>
        <type>Date</type>
    </CustomField>