force-app/main/default/objects/Currency_Conversion__c/fields/Inverse_Spot_Rate__c.field-meta.xml
<CustomField>
        <fullName>Inverse_Spot_Rate__c</fullName>
        <description>Stores the inverse rate for Spot Rate conversion</description>
        <label>Inverse Spot Rate</label>
        <precision>14</precision>
        <scale>6</scale>
        <type>Number</type>
    </CustomField>