force-app/main/default/objects/Currency_Conversion__c/fields/Net_Conversion_Rate__c.field-meta.xml
<CustomField>
        <fullName>Net_Conversion_Rate__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Conversion Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>