force-app/main/default/objects/Currency_Conversion__c/fields/PCR_Rate__c.field-meta.xml
<CustomField>
        <fullName>PCR_Rate__c</fullName>
        <description>Rate used to convert pricing into Deal Currency</description>
        <label>PCR Rate</label>
        <precision>14</precision>
        <scale>6</scale>
        <type>Number</type>
    </CustomField>