force-app/main/default/objects/Currency_Conversion__c/fields/Spot_Rate__c.field-meta.xml
<CustomField>
        <fullName>Spot_Rate__c</fullName>
        <description>Spot Rate for Currency Conversion</description>
        <label>Spot Rate</label>
        <precision>14</precision>
        <scale>6</scale>
        <type>Number</type>
    </CustomField>