force-app/main/default/objects/Currency_Conversion__c/fields/Start_Date__c.field-meta.xml
<CustomField>
        <fullName>Start_Date__c</fullName>
        <description>Start Period for this Currency Conversion</description>
        <label>Start Date</label>
        <type>Date</type>
    </CustomField>