force-app/main/default/objects/Currency_Conversion__c/listViews/All.listView-meta.xml
<ListView>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Currency__c</columns>
        <columns>PCR_Rate__c</columns>
        <columns>Budget_Rate__c</columns>
        <columns>Inverse_Budget_Rate__c</columns>
        <columns>Spot_Rate__c</columns>
        <columns>Inverse_Spot_Rate__c</columns>
        <columns>Active__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </ListView>